2002-01-13 Craig Franklin <craigfranklin@attbi.com>
  * Fixed a bug in gpvc that could cause a segmentation fault.

2002-01-10 Craig Franklin <craigfranklin@attbi.com>
  * Renamed gpasm package to gputils.
  * Changed library from libgpasm.a to libgputils.a
  * Renamed mem2asm.c to dis.c
  * Appended gp prefix to all library files.
  * Renamed /gpasm/opcode.c to /gpasm/directive.c.
  * Corrected and updated copyright notices.
  * Moved /gpasm/cod.h to library. Removed cod.h from gpvc.
  * Moved test files to tool subdir for future support of dejagnu.
  * Started updating users manual.
  * Moved examples to gputils-extra package.
  * Corrected many problems with gplib.
  * Continued work on gplink.  

2001-12-07 Craig Franklin <craigfranklin@attbi.com>
  * Added linker scripts.

2001-12-06 Craig Franklin <craigfranklin@attbi.com>
  * Fixed cygwin warnings with -Wall -pedantic flags.
  * Updated maintainer information.

2001-11-26 Craig Franklin <craigfranklin@attbi.com>
  * Fixed a bug that could cause a core dump when expanding macros.
  * Fixed a bug that cause labels inside of macros for 18cxx devices
    to be off by 2X.
  * Removed unecessary -I /usr/local/share/gpasm/header from example1
    Makefile. 
  * Fixed a bug that causes command line radix to be overwritten on pass 2.
  * Moved symbol table functions to library for use with gplink.
  * Added extra warning flags to cygwin.

2001-11-24 Craig Franklin <craigfranklin@attbi.com>
  * Added new tool gplink.  This tool is intended to be compatible with mplink.
    This is a development version.  It is not complete.  

2001-11-17 Craig Franklin <craigfranklin@attbi.com>
  * Added new tool gplib.  This tool is intended to be compatible with mplib.
    This is a development version.  It is not complete.  

2001-10-31 Craig Franklin <craigfranklin@attbi.com>

  * gpasm 0.9.14 Released.
  * The path to the header files is now searched when including files.  This  